# ACIS2LLM

./: .gitignore  CHANGELOG.md  LICENSE  README.md  acis2llm_setup.py  cli.py  composite_tools.py  config.py  execution.py  formatter.py  main.py  mcp_server.py  pyproject.toml  system_prompt.py  tools.py
.agents/: AGENTS.md
.github/: dependabot.yml
.github/workflows/: publish.yml
XMACIS2 DATA/: KNYC.csv
desktop/: package-lock.json  package.json  rebuild_app.py  rebuild_backend.py  rebuild_frontend.py  rebuild_prompts.py  test_md.js
desktop/scripts/: release.js
desktop/src/: App.css  App.tsx  cities.ts  logging.ts  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: acis-weather-review-2026-06-27.md  xmacis2py-reference.md
docs/field-reports/: 2026-06-27-stress-test-1.md  2026-06-27-stress-test-10.md  2026-06-27-stress-test-11.md  2026-06-27-stress-test-12.md  2026-06-27-stress-test-13.md  2026-06-27-stress-test-14.md  2026-06-27-stress-test-15.md  2026-06-27-stress-test-16.md  2026-06-27-stress-test-17.md  2026-06-27-stress-test-18.md  2026-06-27-stress-test-19.md  2026-06-27-stress-test-2.md  2026-06-27-stress-test-20.md  2026-06-27-stress-test-21.md  2026-06-27-stress-test-22.md  2026-06-27-stress-test-23.md  2026-06-27-stress-test-24.md  2026-06-27-stress-test-25.md  2026-06-27-stress-test-26.md  2026-06-27-stress-test-27.md  2026-06-27-stress-test-28.md  2026-06-27-stress-test-29.md  2026-06-27-stress-test-3.md  2026-06-27-stress-test-30.md  2026-06-27-stress-test-31.md  2026-06-27-stress-test-32.md  2026-06-27-stress-test-33.md  2026-06-27-stress-test-34.md  2026-06-27-stress-test-35.md  2026-06-27-stress-test-36.md  2026-06-27-stress-test-37.md  2026-06-27-stress-test-38.md  2026-06-27-stress-test-39.md  2026-06-27-stress-test-4.md  2026-06-27-stress-test-40.md  2026-06-27-stress-test-41.md  2026-06-27-stress-test-42.md  2026-06-27-stress-test-43.md  2026-06-27-stress-test-44.md  2026-06-27-stress-test-45.md  (+40 more)
skills/acis-weather/: SKILL.md
src/acis2llm/: __init__.py  composite_tools.py  composites.py  execution.py  formatter.py  geocoding.py  mcp_server.py  multi_station.py  tools.py
tests/: conftest.py  mock_mcp.py  test_composite_tools.py  test_composites.py  test_execution.py  test_find_best_station_waterfall.py  test_formatter.py  test_mcp_server.py  test_multi_station.py  test_variable_alias.py
tools/: stress_test.py
(+7 files in other folders)
