[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "acis2llm"
version = "0.1.0"
description = "Weather and climate data tools powered by NOAA RCC ACIS — CLI and MCP server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "yenba" },
]
keywords = ["weather", "climate", "noaa", "acis", "mcp", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "xmacis2py>=2.0",
    "pandas>=2.0",
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/yenba/acis2LLM"
Repository = "https://github.com/yenba/acis2LLM"
Issues = "https://github.com/yenba/acis2LLM/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
acis2llm = "main:main"
acis2llm-mcp = "mcp_server:main"

[tool.setuptools]
py-modules = [
    "main",
    "cli",
    "config",
    "acis2llm_setup",
    "composite_tools",
    "execution",
    "formatter",
    "system_prompt",
    "tools",
    "mcp_server",
]
