[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "acis2llm"
version = "0.2.3"
description = "Agent-friendly helpers for the xmACIS2Py climate library — station discovery, multi-station fetch, and seasonal/monthly composites. Ships with the acis-weather skill."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "yenba" },
]
keywords = ["weather", "climate", "noaa", "acis", "xmacis2py", "agent-skill", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
    "requests>=2.31.0",
    "xmacis2py>=2.4",
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/yenba/acis2LLM"
Repository = "https://github.com/yenba/acis2LLM"
Issues = "https://github.com/yenba/acis2LLM/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
